# sc-flow

./: LICENSE  README.md
sc_flow_copilot/: package.json
sc_flow_copilot/app/: globals.css  layout.tsx  page.tsx
v1/: create_graph.py  flow.dag.yaml  flow.meta.yaml  get_s_details_prompt.jinja2  get_ts_details_prompt.jinja2.amltmp  get_unclass_details_prompt.jinja2  gpt4o_secret_expert.jinja2  gpt4o_top_secret_expert.jinja2  gpt4o_unclass_expert.jinja2  requirements.txt  scg_graph_expert.py  security_classifier.jinja2
v1/graph_component/: create_graph.py  create_graph.yaml.amltmp  (+2 more)
v2/: pyproject.toml
v2/sc_flow/: scflow.py
v2/sc_flow/agents/: __init__.py  base_agent.py  graph.py  state.py
v2/sc_flow/agents/aml_handler/: __init__.py  aml_utils.py  indexer_controller.py
v2/sc_flow/agents/aml_handler/graph_component/: create_graph.py  create_graph_component.yaml  prompt.py
v2/sc_flow/agents/aml_handler/processor_component/: create_doc_processor_component.yaml  process_doc.py
v2/sc_flow/agents/classifier_authority/: agent.py  prompt.py
v2/sc_flow/agents/document_processors/: agent.py
v2/sc_flow/agents/evaluators/: evaluators.py  orchestrator.py  prompts.py
v2/sc_flow/agents/scg_handler/: agent.py  prompt.py
v2/sc_flow/agents/user_proxy/: agent.py  prompt.py
v2/sc_flow/data/: __init__.py  api.py  model.py  sql.py
v2/sc_flow/routes/: __init__.py  file_route_handler.py  model_route_handler.py
v2/sc_flow/utils/: __init__.py  blob_utils.py  cypher_queries.py  generators.py  scflow_logger.py
v2/sc_flow/utils/checkpoint/: aio.py  saver.py
(+2 files in other folders)
